Last 3 matches are finished

--- a/settings.json
+++ b/settings.json
@@ -1,290 +1,12 @@
 {
-    "api_key": "xxxx",
-    "leagues": [
-        {
-            "name": "La Liga",
-            "id": 8,
-            "seasons": [
-                61643,
-                52376,
-                42409,
-                37223,
-                32501,
-                24127,
-                18020,
-                13662,
-                11906,
-                10495,
-                8578,
-                6559,
-                4959,
-                3502,
-                2896,
-                2252,
-                1587,
-                669,
-                102,
-                101,
-                100,
-                99,
-                70,
-                71,
-                72,
-                73,
-                74,
-                75,
-                25689,
-                25690,
-                25688,
-                25687
-            ]
-        },
-        {
-            "name": "Premier League",
-            "id": 17,
-            "seasons": [
-                61627,
-                52186,
-                41886,
-                37036,
-                29415,
-                23776,
-                17359,
-                13380,
-                11733,
-                10356,
-                8186,
-                6311,
-                4710,
-                3391,
-                2746,
-                2139,
-                1544,
-                581,
-                4,
-                3,
-                2,
-                1,
-                46,
-                47,
-                48,
-                49,
-                50,
-                51,
-                25682,
-                25681,
-                29167,
-                25680
-            ]
-        },
-        {
-            "name": "Bundesliga",
-            "id": 35,
-            "seasons": [
-                63516,
-                52608,
-                42268,
-                37166,
-                28210,
-                23538,
-                17597,
-                13477,
-                11818,
-                10419,
-                8238,
-                6303,
-                4792,
-                3405,
-                2811,
-                2188,
-                1557,
-                525,
-                94,
-                93,
-                92,
-                91,
-                90,
-                103,
-                104,
-                105,
-                106,
-                107,
-                13088
-            ]
-        },
-        {
-            "name": "Serie A",
-            "id": 23,
-            "seasons": [
-                63515,
-                52760,
-                42415,
-                37475,
-                32523,
-                24644,
-                17932,
-                13768,
-                11966,
-                10596,
-                8618,
-                6797,
-                5145,
-                3639,
-                2930,
-                2324,
-                1552,
-                712,
-                98,
-                97,
-                96,
-                95,
-                80,
-                81,
-                82,
-                83,
-                84,
-                85
-            ]
-        },
-        {
-            "name": "Ligue 1",
-            "id": 34,
-            "seasons": [
-                61736,
-                52571,
-                42273,
-                37167,
-                28222,
-                23872,
-                17279,
-                13384,
-                11648,
-                10373,
-                8122,
-                6271,
-                4616,
-                3380,
-                2719,
-                2120,
-                1542,
-                534,
-                56,
-                57,
-                58,
-                59,
-                60,
-                61,
-                62,
-                63,
-                64,
-                65
-            ]
-        },
-        {
-            "name": "Champions League",
-            "id": 7,
-            "seasons": [
-                61644,
-                52162,
-                41897,
-                36886,
-                29267,
-                23766,
-                17351,
-                13415,
-                11773,
-                10390,
-                8226,
-                6359,
-                4788,
-                3402,
-                2764,
-                1825,
-                1664,
-                603,
-                15,
-                14,
-                13,
-                12
-            ]
-        },
-        {
-            "name": "Europa League",
-            "id": 679,
-            "seasons": [
-                61645,
-                53654,
-                44509,
-                37725,
-                29343,
-                23755,
-                17352,
-                13416,
-                11774,
-                10391,
-                8228,
-                6361,
-                4790,
-                3403,
-                2765,
-                2155
-            ]
-        },
-        {
-            "name": "Coppa Italia",
-            "id": 328,
-            "seasons": [
-                63668,
-                53505,
-                42742,
-                37611,
-                32628,
-                24519,
-                17945,
-                13673,
-                11949,
-                10560,
-                8568,
-                6755,
-                5115,
-                3645,
-                2920,
-                2293,
-                1556,
-                12518,
-                12517,
-                12516,
-                12515
-            ]
-        },
-        {
-            "name": "FIFA Club World Cup",
-            "id": 16,
-            "seasons": [
-                58210,
-                41087,
-                15586,
-                7528,
-                2531,
-                16,
-                2636,
-                1151,
-                17571,
-                17570,
-                17569,
-                17568,
-                17567,
-                17566,
-                17565,
-                17564,
-                17563,
-                17562,
-                17561,
-                40714,
-                17560,
-                17559,
-                40712
-            ]
-        }
-    ]
+    "api_key": "xxx",
+    "leagues": {
+        "187": "NB I",
+        "17": "Premier League",
+        "35": "Bundesliga",
+        "23": "Serie A",
+        "34": "Ligue 1",
+        "8": "La Liga",
+        "152": "Romanian Super Liga"
+    }
 }
